# DRL-Pacman

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all_experiments.py
configs/double_dqn/: double_dqn_lr_0001.yaml  double_dqn_lr_0005.yaml  double_dqn_lr_001.yaml  double_dqn_lr_01.yaml
configs/dqn/: dqn_lr_0001.yaml  dqn_lr_0005.yaml  dqn_lr_001.yaml  dqn_lr_01.yaml
configs/q_learning/: q_learning_lr_0001.yaml  q_learning_lr_0005.yaml  q_learning_lr_001.yaml  q_learning_lr_01.yaml
docs/: comparison.md
experiments/history/double_dqn/: double_dqn_lr_0001_history.jsonl  double_dqn_lr_0005_history.jsonl  double_dqn_lr_001_history.jsonl
experiments/history/dqn/: dqn_lr_0001_history.jsonl  dqn_lr_0005_history.jsonl  dqn_lr_001_history.jsonl
experiments/history/q_learning/: q_learning_lr_0001_history.jsonl  q_learning_lr_0005_history.jsonl  q_learning_lr_001_history.jsonl
experiments/metrics/double_dqn/: double_dqn_lr_0001_eval_metrics.csv  double_dqn_lr_0001_metrics.csv  double_dqn_lr_0005_eval_metrics.csv  double_dqn_lr_0005_metrics.csv  double_dqn_lr_001_eval_metrics.csv  double_dqn_lr_001_metrics.csv
scripts/: run_lr_0001.ps1  run_lr_0005.ps1  run_lr_001.ps1  run_lr_01.ps1
src/pacman_env/: grid_world.py
src/training/: checkpointing.py  compare_runs.py  config_utils.py  evaluation.py  logging_utils.py  render_demo_gif.py  train_double_dqn.py  train_dqn.py  train_q_learning.py  watch_finals.py  watch_model.py
tests/: test_checkpointing.py  test_config_utils.py  test_dqn_agents.py  test_env.py  test_evaluation.py  test_logging_utils.py
(+23 files in other folders)
